--- a/main.ipynb
+++ b/main.ipynb
@@ -69,7 +69,7 @@
     "times = [f'{h:02d}:{m:02d}' for h in range(24) for m in range(0, 60, 15)]\n",
     "\n",
     "plt.title('TTC Bus Delay Frequency by 15-Minute Intervals Throughout the Day (2022-2023))')\n",
-    "plt.xlabel('Time of Day (in minutes)')\n",
+    "plt.xlabel('Time of Day')\n",
     "plt.ylabel('Number of Delays')\n",
     "plt.xticks(bins[::4], times[::4], rotation=45)\n",
     "\n",
